add template fields to view/order input

--- a/PflStoreProject/Views/Order/CustomerData.cshtml
+++ b/PflStoreProject/Views/Order/CustomerData.cshtml
@@ -7,9 +7,9 @@
 
 
 <div class="page">
-    <h4>Shipping Information</h4>
+    <h4>Customer Information</h4>
 
-    <p class="heading-text">Please enter your name and contact information for this order. Fields marked with <font color="#cc3300">*</font> are required.</p>
+    <p class="heading-text">Please enter the billing name and contact information for this order. Fields marked with <font color="#cc3300">*</font> are required.</p>
 
 
 
