--- a/PflStoreProject/Views/Order/ShipmentData.cshtml
+++ b/PflStoreProject/Views/Order/ShipmentData.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="page">
-<h4>Shipment Information</h4>
+<h4>Shipping Information</h4>
 
 <p class="heading-text">Please enter recipient's contact and shipping information.. Fields marked with <font color="#cc3300">*</font> are required.</p>
 
