--- a/PflStoreProject/Views/Shared/_Layout.cshtml
+++ b/PflStoreProject/Views/Shared/_Layout.cshtml
@@ -9,20 +9,20 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark">
-          
+
             <div class="container">
-            <div class="navbar-brand">
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="nav-item"></span>
-                    <span class="nav-item"></span>
-                    <span class="nav-item"></span>
-                </button>
-                <div class="">
-                    <a asp-area="" asp-controller="Product" asp-action="Index" class="navbar-brand">PFL Store Project</a>
-                </div> 
-            </div>
-            <div class="navbar-collapse collapse">
+                <div class="navbar-brand">
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="nav-item"></span>
+                        <span class="nav-item"></span>
+                        <span class="nav-item"></span>
+                    </button>
+                    <div class="">
+                        <a asp-area="" asp-controller="Product" asp-action="Index" class="navbar-brand">PFL Store Project</a>
+                    </div>
+                </div>
+                <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         @* <li><a asp-area="" asp-controller="Product" asp-action="Index">Products</a></li> *@
                         @* <li><a asp-area="" asp-controller="Home" asp-action="About">Placeholder</a></li> *@
@@ -34,9 +34,12 @@
         <div class="container-fluid body-content">
             <div> @RenderBody()</div>
         </div>
-            <script src="/lib/jquery/dist/jquery.min.js"></script>
-            <script src="/js/site.js"></script>
-            <script src="/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-            <script src="/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        
+        <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+        <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+        <script src="~/js/site.js"></script>
+
     </body>
 </html>
