--- a/PflStoreProject/Views/Product/Show.cshtml
+++ b/PflStoreProject/Views/Product/Show.cshtml
@@ -4,133 +4,142 @@
 
 @model ProductDetailViewModel
 
+<div class="container">
+    <div class="row">
+        <div class="mt-5 product-nav">
+            <h4>Product List</h4>
+            <h6 class="text-danger">(*Note: this should be filter)</h6>
+            @await Component.InvokeAsync("ProductNav")
+        </div>
 
-<div class="row">
-    <div class="mt-5 pl-5 product-nav">
-        <h4>Product List</h4>
-        <h6 class="text-danger">(*Note: this should be filter)</h6>
-        @await Component.InvokeAsync("ProductNav")
-    </div>
-
-    <div class="product-image-panel" width="500px">
-        <small>Item # @Model.Detail.Id</small>
-        <h4>@Model.Detail.Name</h4>
-        <img class="product-image" src="@Model.Detail.ImageURL" alt="Alternate Text" />
-    </div>
-    <div class="product-content-panel">
-        <form asp-action="CreateOrderItem" enctype="multipart/form-data" asp-controller="Order" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <h6>@Model.Detail.Description</h6>
-            @foreach (DeliveredPrice location in Model.Detail.DeliveredPrices)
-            {
-                if (Model.Detail.ShippingMethodDefault == location.DeliveryMethodCode)
+        <div class="product-image-panel" width="500px">
+            <small>Item # @Model.Detail.Id</small>
+            <h4>@Model.Detail.Name</h4>
+            <img class="product-image" src="@Model.Detail.ImageURL" alt="Alternate Text" />
+        </div>
+        <div class="product-content-panel float-right">
+            <form id="item-form" asp-action="CreateOrderItem" enctype="multipart/form-data" asp-controller="Order" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <h6>@Model.Detail.Description</h6>
+                @foreach (DeliveredPrice location in Model.Detail.DeliveredPrices)
                 {
-                    <p id="price">
-                        <i>
-                            Starting as low as @location.Price.ToString("C") for quantity of
-                            @Model.Detail.QuantityDefault including domestic ground shipping!
-                        </i>
-                    </p>
-                }
-            }
-            <div class="design">
-                <h4>Custom Design</h4>
-                <p>How would you like to provide your custom design information?</p>
-                <div><span asp-validation-for="DesignOption" class="text-danger"></span></div>
-                <div class="form-check">
-
-                    <input class="design-radio" type="radio" asp-for="DesignOption" value="sendTemplate" /><b> Email your design file</b>
-
-                    <div class="design-information">
-                        <p>
-                            Attach your design file to an email with your order number in the subject line, and send to designcenter@example.com
+                    if (Model.Detail.ShippingMethodDefault == location.DeliveryMethodCode)
+                    {
+                        <p id="price">
+                            <i>
+                                Starting as low as @location.Price.ToString("C") for quantity of
+                                @Model.Detail.QuantityDefault including domestic ground shipping!
+                            </i>
                         </p>
-                    </div>
-                </div>
-                <div class="form-check design-file mt-3">
-
-                    <input class="design-radio" type="radio" asp-for="DesignOption" value="designFile" id="design-information" />
-                    <b>
-                        Upload your custom design
-                    </b>
-
-                    <div class="design-information form-check-label" for="design-information">
-                        <input class="form-control-file" type="file"
-                               name="fileUpload" multiple />
-                    </div>
-                </div>
-                <div class="form-check mt-3">
-                    @if (Model.Detail.HasTemplate)
-                    {
-
-                        <input class="design-radio" type="radio" asp-for="DesignOption" value="designTemplate" />
-                        <b>Enter fields into template</b>
-                        <div class="design-information">
-                            <p>Fill in the following fields to customize your order</p>
-                            <p class="text-danger">(NOTE: Pretend these fields popped up on a graphical interface :))</p>
-
-                            @{
-                                List<Field> path = Model.Detail.TemplateFields.Fieldlist.Field;
-                                for (var i = 0; i < path.Count; i++)
-                                {
-
-                                    <div class="form-group">
-                                        <label class="col-4" for="@path[i].Fieldname">
-                                            @path[i].Fieldname
-                                            @if (path[i].Required == "Y")
-                                            {
-
-                                                <span>(required)</span>
-                                            }
-                                        </label>
-                                        <input type="hidden" name="Detail.TemplateFields.Fieldlist.Field[@i].Htmlfieldname" value="@path[i].Htmlfieldname" />
-                                        <input type="text" name="Detail.TemplateFields.Fieldlist.Field[@i].Fieldname" id="@path[i].Fieldname" />
-                                        <input type="hidden" name="Detail.TemplateFields.Fieldlist.Field[@i].Required" value="@path[i].Required" />
-                                        <input type="hidden" asp-for="@path[i].Type" value="@path[i].Type" />
-                                    </div>
-                                }
-                            }
-                        </div>
                     }
-                </div>
-                <h6 class="mt-3"><b>We will review your files and send you a proof within one business day.</b></h6>
-            </div>
-            <div class="form-inline">
-                <label class=" pl-0 text-left" asp-for="Item.Quantity">Enter Quantity: </label>
-                <input class="ml-2 col-3 form-control" asp-for="Item.Quantity" type="number" max="@Model.Detail.QuantityMaximum"
-                       step="@Model.Detail.QuantityIncrement" value="@Model.Detail.QuantityMinimum" />
-            </div>
-            <p>
-                <small>
-                    <b>*Quantity Restrictions:</b> Min. @Model.Detail.QuantityMinimum/Max. @Model.Detail.QuantityMaximum in
-                    increments of @Model.Detail.QuantityIncrement
-                </small>
-            </p>
-            <div class="shipping-options">
-                <div><span asp-validation-for="DeliveryMethod" class="text-danger"></span></div> <label for="countrySelector">Shipping Options:</label>
-                <select id="countrySelector" name="countrySelector" class="form-control">
-                    @foreach (string item in Model.Countries)
-                    {
-                        <option value="@item">@item</option>
-                    }
-                </select>
-                @foreach (DeliveredPrice item in Model.Detail.DeliveredPrices)
-                {
-                    <ul>
-                        <li class="deliveryMethods" name="@item.Country">
-                            <input type="radio" asp-for="DeliveryMethod" value="@item.DeliveryMethodCode"> @item.Description
-                        </li>
-                    </ul>
                 }
-            </div>
-            <input type="hidden" asp-for="Item.ProductID" value="@Model.Detail.Id" />
-            <input asp-for="Item.ProductName" type="hidden" value="@Model.Detail.Name" />
-            <input asp-for="Detail.QuantityMinimum" type="hidden" value="@Model.Detail.QuantityMinimum" class="form-control" />
-            <input asp-for="Detail.QuantityMaximum" type="hidden" value="@Model.Detail.QuantityMaximum ?? 'N/A'" class="form-control" />
-            <input asp-for="Detail.QuantityIncrement" type="hidden" value="@Model.Detail.QuantityIncrement ?? 1" class="form-control" />
-            <input asp-for="Item.ProductionDays" type="hidden" value="@Model.Detail.ProductionSpeeds[0].Days" class="form-control" />
-            <input type="submit" value="Order" class="btn btn-default btn-block order-button" />
-        </form>
+                <div class="design">
+                    <h4>Custom Design</h4>
+                    <p>How would you like to provide your custom design information?</p>
+                    <div><span asp-validation-for="DesignOption" class="text-danger"></span></div>
+                    <div class="form-check">
+
+                        <input class="design-radio" type="radio" asp-for="DesignOption" value="sendTemplate" /><b> Email your design file</b>
+
+                        <div class="design-information">
+                            <p>
+                                Attach your design file to an email with your order number in the subject line, and send to designcenter@example.com
+                            </p>
+                        </div>
+                    </div>
+                    <div class="form-check design-file mt-3">
+
+                        <input class="design-radio" type="radio" asp-for="DesignOption" value="designFile" id="design-information" />
+                        <b>
+                            Upload your custom design
+                        </b>
+
+                        <div class="design-information form-check-label" for="design-information">
+                            <input class="form-control-file" type="file"
+                                   asp-for="Item.ItemFile" multiple />
+                        </div>
+                    </div>
+                    <div class="form-check mt-3">
+                        @if (Model.Detail.HasTemplate)
+                        {
+
+                            <input class="design-radio" type="radio" asp-for="DesignOption" value="designTemplate" />
+                            <b>Enter fields into template</b>
+                            <div class="design-information">
+                                <p>Fill in the following fields to customize your order</p>
+                                <p class="text-danger">(NOTE: Pretend these fields popped up on a graphical interface :))</p>
+
+                                @{
+                                    List<Field> path = Model.Detail.TemplateFields.Fieldlist.Field;
+                                    for (var i = 0; i < path.Count; i++)
+                                    {
+
+                                        <div class="form-group">
+                                            <label for="@path[i].Fieldname">
+                                                @path[i].Fieldname
+                                                @if (path[i].Required == "Y")
+                                                {
+
+                                                    <span>(required)</span>
+                                                }
+                                            </label>
+                                            <input type="hidden" name="Detail.TemplateFields.Fieldlist.Field[@i].Htmlfieldname" value="@path[i].Htmlfieldname" />
+                                            <input class="form-control" type="text" name="Detail.TemplateFields.Fieldlist.Field[@i].Fieldname" id="@path[i].Fieldname" />
+                                            <input type="hidden" name="Detail.TemplateFields.Fieldlist.Field[@i].Required" value="@path[i].Required" />
+                                            <input type="hidden" asp-for="@path[i].Type" value="@path[i].Type" />
+                                        </div>
+                                    }
+                                }
+                            </div>
+                        }
+                    </div>
+                    <h6 class="mt-3"><b>We will review your files and send you a proof within one business day.</b></h6>
+                </div>
+                <div class="form-inline">
+                    <label class=" pl-0 text-left" asp-for="Item.Quantity">Enter Quantity: </label>
+                    @{
+                        var min = Model.Detail.QuantityIncrement;
+                        if (min < 1)
+                        {
+                            min = 1;
+                        }
+
+                        <input id="quantity"  min="@Model.Detail.QuantityMinimum"  class="ml-2 col-3 form-control" asp-for="Item.Quantity" type="number"  />
+                    }
+                </div>
+                <p>
+                    <small>
+                        <b>*Quantity Restrictions:</b> Min. @Model.Detail.QuantityMinimum 
+                        @if((int)Model.Detail.QuantityIncrement > 1) { <span>increments of @Model.Detail.QuantityIncrement</span> }
+                        
+                    </small>
+                </p>
+                <div class="shipping-options">
+                    <div><span asp-validation-for="DeliveryMethod" class="text-danger"></span></div> <label for="countrySelector">Shipping Options:</label>
+                    <select id="countrySelector" name="countrySelector" class="form-control">
+                        @foreach (string item in Model.Countries)
+                        {
+                            <option value="@item">@item</option>
+                        }
+                    </select>
+                    @foreach (DeliveredPrice item in Model.Detail.DeliveredPrices)
+                    {
+                        <ul>
+                            <li class="deliveryMethods" name="@item.Country">
+                                <input type="radio" asp-for="DeliveryMethod" value="@item.DeliveryMethodCode"> @item.Description
+                            </li>
+                        </ul>
+                    }
+                </div>
+                <input type="hidden" asp-for="Item.ProductID" value="@Model.Detail.Id" />
+                <input asp-for="Item.ProductName" type="hidden" value="@Model.Detail.Name" />
+                <input asp-for="Detail.QuantityMinimum" type="hidden" value="@Model.Detail.QuantityMinimum" id="min" />
+                <input asp-for="Detail.QuantityMaximum" type="hidden" value="@Model.Detail.QuantityMaximum" id="max" />
+                <input asp-for="Detail.QuantityIncrement" type="hidden" value="@Model.Detail.QuantityIncrement id="step" />
+                <input asp-for="Item.ProductionDays" type="hidden" value="@Model.Detail.ProductionSpeeds[0].Days" class="form-control" />
+                <input type="submit" value="Order" class="btn btn-default btn-block order-button" />
+            </form>
+        </div>
     </div>
 </div>
 
