--- a/PflStoreProject/Views/Shared/Errors.cshtml
+++ b/PflStoreProject/Views/Shared/Errors.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @model IEnumerable<Error>
-<h4 id="error-heading">...Oops something went wrong!</h4>
+<h4 class="mt-5 mb-5" id="error-heading">...Oops something went wrong!</h4>
 
 @foreach (Error err in Model)
 {
@@ -9,8 +9,5 @@
     {
         <p>Message: @msg</p>
     }
-
-    <a asp-action="Index" asp-controller="Product">Go Back to Storefront</a>
-
-
 }
+<a asp-action="Index" asp-controller="Product">Go Back to Storefront</a>
