--- a/PflStoreProject/Views/Product/Show.cshtml
+++ b/PflStoreProject/Views/Product/Show.cshtml
@@ -3,6 +3,11 @@
 }
 
 @model ProductDetailViewModel
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<script src="/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<script src="/js/site.js"></script>
+
 
 <div class="container">
     <div class="row">
@@ -96,19 +101,22 @@
                     <h6 class="mt-3"><b>We will review your files and send you a proof within one business day.</b></h6>
                 </div>
                 <div class="form-inline">
-                    <label class=" pl-0 text-left" asp-for="Item.Quantity">Enter Quantity: </label>
+                    <label class=" pl-0 text-left" asp-for="Item.Quantity">Quantity: </label>
 
-                     <input id="quantity"  min="@Model.Detail.QuantityMinimum"  class="ml-2 col-3 form-control" asp-for="Item.Quantity" type="number"  />
-                    
+                    <input id="quantity" class="ml-2 col-3 mr-2 form-control" name="quantity" type="number"/> <br />
+
                 </div>
                 <p>
                     <small>
-                        <b>*Quantity Restrictions:</b> Min. @Model.Detail.QuantityMinimum 
-                        
+                        <b>*Quantity Restrictions:</b> Min. @Model.Detail.QuantityMinimum
+
                     </small>
                 </p>
                 <div class="shipping-options">
-                    <div><span asp-validation-for="DeliveryMethod" class="text-danger"></span></div> <label for="countrySelector">Shipping Options:</label>
+                    <div>
+                        <span asp-validation-for="DeliveryMethod" class="text-danger"></span>
+                    </div>
+                    <label for="countrySelector">Shipping Options:</label>
                     <select id="countrySelector" name="countrySelector" class="form-control">
                         @foreach (string item in Model.Countries)
                         {
