--- a/PflStoreProject/Views/Shared/_Layout.cshtml
+++ b/PflStoreProject/Views/Shared/_Layout.cshtml
@@ -34,12 +34,10 @@
         <div class="container-fluid body-content">
             <div> @RenderBody()</div>
         </div>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        
-        <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-        <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-        <script src="~/js/site.js"></script>
-
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
+    <script src="/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="/js/site.js"></script>
     </body>
 </html>
